--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.3",
+    "fake-auth": "^0.1.7",
+    "prop-types": "^15.7.2",
     "react": "^17.0.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^6.9.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4"
   },
   "scripts": {
