--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
     "fake-auth": "^0.1.7",
+    "graphql": "^15.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
     "react-bootstrap": "^1.4.0",
