--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rick-and-morty",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://areyousure92.github.io/rick-and-morty",
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@testing-library/jest-dom": "^4.2.4",
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.3",
     "fake-auth": "^0.1.7",
+    "gh-pages": "^3.1.0",
     "graphql": "^15.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.0",
@@ -22,7 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
