changed homepage in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rick-and-morty",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://areyousure92.github.io/rick-and-morty",
+  "homepage": "http://areyousure-d.github.io/rick-and-morty",
   "dependencies": {
     "@apollo/client": "^3.2.5",
     "@testing-library/jest-dom": "^4.2.4",
